--- a/DAY2/index.html
+++ b/DAY2/index.html
@@ -4,11 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Movie Details </title>
+    <style>
+        img{
+            width: 300px;
+            height: 250px;
+        }
+        video{
+            width: 300px;
+            height: auto;
+        }
+    </style>
 </head>
 <body>
-    <img src ="../movies/jersey.jpeg" width="300" height="300" alt="jersey pic"> 
-    <img src ="../movies/bahubali.jpg" width="300" height="300" alt="bahubali pic"> 
-    <img src ="../movies/godavari.jpg" width="500" height="300" alt="godavari pic"> <br><br>
+    <img src ="../movies/jersey.jpeg"  alt="jersey pic"> 
+    <img src ="../movies/bahubali.jpg"  alt="bahubali pic"> 
+    <img src ="../movies/godavari.jpg"  alt="godavari pic"> <br><br>
     <audio controls  loop>
         <source src="../movies/[iSongs.info] 01 - Adhento Gaani Vunnapaatuga.mp3" ></source>
     </audio>
@@ -18,13 +28,13 @@
     <audio controls loop>
         <source src="../movies/06 - Ramachakani Sita  - SenSongsMp3.co.mp3"></source>
     </audio><br>
-    <video controls  loop width="300"  height="200" poster=""  >
+    <video controls  poster=""  >
         <source src="../movies/Aakhari Prayatnam  Jersey  Aarambhame Le - Telugodi Edits (1080p, h264) (1).mp4 "></source>
     </video>
-    <video controls  loop width="300"  height="150" poster=""  >
+    <video controls   poster=""  >
         <source src="../movies/Aakhari Prayatnam  Jersey  Aarambhame Le - Telugodi Edits (1080p, h264) (1).mp4"></source>
     </video>
-    <video controls  loop width="300"  height="200" poster=""  >
+    <video controls  loop  poster=""  >
         <source src="../movies/Aakhari Prayatnam  Jersey  Aarambhame Le - Telugodi Edits (1080p, h264) (1).mp4 "></source>
     </video>
     
