--- a/day14/sign.html
+++ b/day14/sign.html
@@ -103,7 +103,7 @@
         <input type="password" placeholder="Enter Password" name="Password" required><br><br>
         <button type="button">Login</button><br><br>
         <input type="checkbox" checked="checked"> Remember me
-        <button type="button" id="cancelbtn">Cancel</button><br><br>
+        <button type="reset" id="cancelbtn">Cancel</button><br><br>
         <a href="#">Forget Password</a><br>
         <a href="sign.html">Register</a>
       </form>
