--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./mini_project1/style.css">
 </head>
 <body >
 <marquee ><h3>𝕌𝕡𝕥𝕠 𝟚𝟝% 𝔻𝕚𝕤𝕔𝕠𝕦𝕟𝕥 𝕗𝕠𝕣 𝕤𝕦𝕞𝕞𝕖𝕣 𝕤𝕡𝕖𝕔𝕚𝕒𝕝</h3></marquee>
