--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
    <tr><td>
 <h1><u>MENU</u> 
 </h1></td>
-<td rowspan="2"><img src="../images/logo_ammachethi.png" alt="logo"></td>
+<td rowspan="2"><img src="./images/logo_ammachethi.png" alt="logo"></td>
 
 <tr><td><h2 > Amma Chethi Vanta</h2></td></tr>
 </table>
@@ -22,26 +22,26 @@
    <table width="100%" >
    <tr align="center">
    <td >
-   <img src="../images/idly.jpeg" alt="Idly sambar">
+   <img src="./images/idly.jpeg" alt="Idly sambar">
    <p >Idly sambar(3) - 40 &#8377</p>
    </td><br>
    <td >
-   <img src="../images/dosa.jpeg" alt="Dosa">
+   <img src="./images/dosa.jpeg" alt="Dosa">
    <p >Dosa(2) - 50 &#8377</p>
    </td>
    <td >
-   <img src="../images/chapathi.avif" alt="Chapathi" >
+   <img src="./images/chapathi.avif" alt="Chapathi" >
    <p >Chapathi(2) - 60 &#8377</p>
    </td>
 <td >
-   <img src="../images/poori-puri-recipe.jpg" alt="Poori">
+   <img src="./images/poori-puri-recipe.jpg" alt="Poori">
    <p >Poori(3) - 50 &#8377</p>
    </td>
 
 </tr>
 <tr align="center">
     <td >
-   <img src="../images/hyderabadi-chicken-biryani-aromatic-flavorful-260nw-2497040151.webp" alt="Hyderabadi biryani" >
+   <img src="./images/hyderabadi-chicken-biryani-aromatic-flavorful-260nw-2497040151.webp" alt="Hyderabadi biryani" >
    <p>
   <abbr title="Full biryani(2) - 280 ₹ &#10;Family Biryani(4) - 450 ₹">
     biryani(1) - 150 ₹
@@ -50,18 +50,18 @@
 
    </td>
    <td >
-   <img src="../images/mutton_biryani.jpg" alt="mutton_biryani" >
+   <img src="./images/mutton_biryani.jpg" alt="mutton_biryani" >
    <p >
    <abbr title="Full biryani(2) - 360 ₹ &#10;Family Biryani(4) - 650 ₹">
       Mutton biryani(1) - 200 &#8377</p></abbr>
    </td>
    <td >
-   <img src="../images/fry biryani.jpg" alt="chicken fry biryani" >
+   <img src="./images/fry biryani.jpg" alt="chicken fry biryani" >
    <p ><abbr title="Full biryani(2) - 340 ₹ &#10;Family Biryani(4) - 600 ₹">
       Chiken fry biryani(1) - 180 &#8377</p></abbr>
    </td>
    <td >
-   <img src="../images/prawn.jpg" alt="prawn biryani"  id="prawn">
+   <img src="./images/prawn.jpg" alt="prawn biryani"  id="prawn">
    <p ><abbr title="Full biryani(2) - 380 ₹ &#10;Family Biryani(4) - 620 ₹">
       prawn biryani(1) - 200 &#8377</p></abbr>
    </td>
@@ -69,19 +69,19 @@
 <tr align="center">
    </td>
    <td >
-   <img src="../images/rice.jpeg" alt="Rice" >
+   <img src="./images/rice.jpeg" alt="Rice" >
    <p > Veg Full Meals - 120 &#8377</p>
    </td>
    <td >
-   <img src="../images/burger.avif" alt="burger" >
+   <img src="./images/burger.avif" alt="burger" >
    <p >Burger(1) - 70 &#8377</p>
    </td>
    <td >
-   <img src="../images/pizza.avif" alt="pizza" >
+   <img src="./images/pizza.avif" alt="pizza" >
    <p >Pizza(1) -90 &#8377</p>
 
    <td >
-   <img src="../images/fish_curry.webp" alt="fish curry" >
+   <img src="./images/fish_curry.webp" alt="fish curry" >
    <p >Fish Curry(3 piece) - 75 &#8377</p>
    </td>
 </tr>
