--- a/mini_project2/portifolio.html
+++ b/mini_project2/portifolio.html
@@ -7,13 +7,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div>
      <!-- navigation bar -->
       <div class="navbar">
         <div class="logo">About <span>Me.</span></div>
         <ul>
             <li><a href="#">HOME</a></li>
             <li><a href="#about" target="_blank">ABOUT</a></li>
-            <li><a href="#">images</a></li>
+            <li><a href="#images">images</a></li>
             <li><a href="#">certifications</a></li>
             <li><a href="#">skills</a></li>
             <li><a href="#">resume</a></li>
@@ -32,9 +33,13 @@
         <div class="my-img">
           <img src="../images/my_image.jpg" alt="shannu images">
          </div>
-         </div>
+         </div> </div>
+
+
+         <div class="about">
          <section id="about">
-          <h2 >About Me</h2>
+
+          <h2  class="h2">About Me</h2>
           <p>Hello! I’m Shanmukha Penta, a passionate Python programmer and coding enthusiast.  
           I enjoy exploring core concepts of programming, solving algorithmic problems, and building projects that make an impact.  
           My journey so far includes practicing data structures, control statements, functions, and working with list comprehensions, pattern problems, and number theory (like Armstrong, Neon, and Perfect numbers).</p>
@@ -45,6 +50,13 @@
           <p>When I’m not coding, you can find me reading about new tech trends or creating tutorials to help beginners get started.</p>
 
           <p><strong>Let’s connect and build something amazing together!</strong></p></section>
+           </div>
+        <div class="images">
+          <section id="images">
+
+          </section>
+
+        </div>
 
 </body>
 
