--- a/mini_project1/index.html
+++ b/mini_project1/index.html
@@ -14,7 +14,7 @@
    <tr><td>
 <h1><u>MENU</u> 
 </h1></td>
-<td rowspan="2"><img src="../images/logo_ammachethi.png" alt="logo"></td>
+<td rowspan="2"><img src="./images/logo_ammachethi.png" alt="logo"></td>
 
 <tr><td><h2 > Amma Chethi Vanta</h2></td></tr>
 </table>
