--- a/DAY1/day1.html
+++ b/DAY1/day1.html
@@ -1,34 +1,89 @@
-<!Doctype html>
+<!DOCTYPE html>
 <html>
- <head>
-  <title>Resume</title>
- <body>
-   <center><h2>PENTA SHANMUKHA</h2>
-   <B>Frontend Developer</B><br>
-   <B>vizianagram,Andhrapradesh,535126</B><br>
-   <strong>Ph no :+91 809608587 </strong> <strong>| Email-pentashanmukha2002@gmail.com</strong></center><br><br>
-   <h2>CAREER OBJECTIVE</h2><hr>
-  <p>Seeking a front-end developer position where i can apply my technical skills in HTML,CSS,JavaScript,and Reactjs    to contribute to company growth and advance my professional development.</P>
-  <br>
+<head>
+    <title>Resume</title>
+    <style>
+        body {
+            background-color: #f0f0f0;
+            display: flex;
+            justify-content: center;
+            padding: 20px;
+        }
+        .doct {
+            /* background: white; */
+            width: 794px; /* A4 width */
+            min-height: 1123px; /* A4 height */
+            padding: 30px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            border: 3px solid palevioletred;
+            text-align: center;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            border-radius: 10px;
+        }
+        h2 {
+            margin-bottom: 5px;
+        }
+        hr {
+            width: 100%;
+            border: 1px solid palevioletred;
+        }
+        p {
+            margin: 5px 0;
+        }
+        ul {
+            list-style: none;
+            padding: 0;
+        }
+        ul li {
+            text-align: left;
+        }
+        .shannu,#carrer,h2{
+            color: hotpink;
+        }
+        *{
+            background-color: aquamarine;
+        }
+        
+    </style>
+</head>
+<body>
+    <div class="doct">
+        <h2 class="shannu">PENTA SHANMUKHA</h2>
+        <b>Frontend Developer</b>
+        <b>Vizianagaram, Andhra Pradesh, 535126</b>
+        <b>Ph no: +91 809608587</b>
+        <strong>Email: pentashanmukha2002@gmail.com</strong>
+        <br><br>
 
-<h2>EDUCATION</h2><hr>
-<p>Master's of computer application <b> (MCA)</b>,University arts & Science college,Warangal <strong>(2023 - 2025)</strong> <p align= "right"> <b>70%</b> </p></p>
-<p>Bachelor's Degree in the Stream of <b>Computer Science,Vizianagaram (2020 - 2023) </b><p align ="right" ><b> 80%</b></p>
-<h2>SKILLS</h2><hr>
-<b>Programming Languague</b> :HTML,CSS,javaScript<br>
-<b>Frameworks/Libraries</b>  :React,Bootstrap,Redux<br>
-<b>Tools </b>:  Git,Github.<br>
-<b>Databases:</b> Mysql<br></p>
-<h2>Languages</h2><hr>
-<ul>
-    <li>Telugu</li>
-    <li>English</li>
-    <li>Hindi</li>
-    <li>Malayali</li>
-</ul>
+        <h2 id="carrer">CAREER OBJECTIVE</h2>
+        <hr>
+        <p>Seeking a front-end developer position where I can apply my technical skills in HTML, CSS, JavaScript, and React.js to contribute to company growth and advance my professional development.</p>
+        <br>
 
+        <h2>EDUCATION</h2>
+        <hr>
+        <p>Master's of Computer Application <b>(MCA)</b>, University Arts & Science College, Warangal <strong>(2023 - 2025)</strong> <span style="float:right;"><b>70%</b></span></p>
+        <p>Bachelor's Degree in the Stream of <b>Computer Science</b>, Vizianagaram <strong>(2020 - 2023)</strong> <span style="float:right;"><b>80%</b></span></p>
 
- </body>
- </head>
- </html>
-  
+        <h2>SKILLS</h2>
+        <hr>
+        <p><b>Programming Languages:</b> HTML, CSS, JavaScript</p>
+        <p><b>Frameworks/Libraries:</b> React, Bootstrap, Redux</p>
+        <p><b>Tools:</b> Git, GitHub</p>
+        <p><b>Databases:</b> MySQL</p>
+
+        <h2>LANGUAGES</h2>
+        <hr>
+        <ul>
+            <li>Telugu</li>
+            <li>English</li>
+            <li>Hindi</li>
+            <li>Malayalam</li>
+        </ul>
+    </div>
+</body>
+</html>
