--- a/DAY3/path.html
+++ b/DAY3/path.html
@@ -5,15 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Single Page Example with Anchor Links</title>
   <style>
-    /* Basic styling for layout */
+
     body {
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      scroll-behavior: smooth; /* Smooth scrolling */
+      scroll-behavior: smooth;
     }
 
-    /* Navigation bar */
+ 
     nav {
       background-color: #333;
       padding: 10px;
@@ -34,10 +34,10 @@
       color: yellow;
     }
 
-    /* Section styles */
+ 
     section {
       padding: 100px 20px;
-      height: 100vh; /* Full screen height */
+      height: 100vh; 
     }
 
     #home {
@@ -53,32 +53,30 @@
     }
 
     h1 {
-      margin-top: 60px; /* space for fixed nav */
+      margin-top: 60px; 
     }
   </style>
 </head>
 <body>
 
-  <!-- Navigation Menu -->
+  
   <nav>
     <a href="#home">Home</a>
     <a href="#about">About</a>
     <a href="#contact">Contact</a>
   </nav>
 
-  <!-- Home Section -->
+
   <section id="home">
     <h1>Home Section</h1>
     <p>Welcome to the Home section. This is a single-page website using anchor links.</p>
   </section>
 
-  <!-- About Section -->
   <section id="about">
     <h1>About Section</h1>
     <p>This is the About section. Instead of loading a new page, the link scrolls here.</p>
   </section>
 
-  <!-- Contact Section -->
   <section id="contact">
     <h1>Contact Section</h1>
     <p>This is the Contact section. You can reach us here.</p>
